[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/player/human_run.png" type="Texture" id=1]
[ext_resource path="res://scenes/player/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/player/werewolf_run.png" type="Texture" id=3]
[ext_resource path="res://scenes/player/Camera2D.gd" type="Script" id=4]
[ext_resource path="res://assets/lights/light.png" type="Texture" id=5]
[ext_resource path="res://assets/player/wolf_eye_mask.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=3]
radius = 4.0

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( -5, -1, -5, -6, -4, -6, -4, -7, -3, -7, -3, -8, 4, -8, 4, -7, 5, -7, 5, -5, 6, -5, 6, -4, 5, -4, 5, 1, 4, 1, 4, 3, 5, 3, 5, 5, 4, 5, 4, 6, 3, 6, 3, 7, 1, 7, 1, 5, 0, 5, 0, 6, -1, 6, -1, 7, -2, 7, -2, 8, -4, 8, -4, 4, -5, 4, -5, 3, -6, 3, -6, 1, -5, 1 )

[sub_resource type="Shader" id=11]
code = "shader_type canvas_item;

uniform sampler2D emission_teture;
uniform vec4 glow_color : hint_color = vec4(1.0);

void fragment()
{
	vec4 current_color = texture(TEXTURE,UV); // what's our current sprite pixel
	vec4 emission_color = texture(emission_teture,UV); // what's our current emission pixel
	
	if(emission_color.r > 0.0) // check if we're not black in the emission color.
	{
		COLOR = (emission_color + glow_color) // add brightness corrosponding with the emission pixel
	}
	else
	{
		COLOR = current_color; // we arent over an emission pixel leave alone
	}
}"

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 11 )
shader_param/glow_color = Color( 0.941176, 0, 0, 1 )
shader_param/emission_teture = ExtResource( 6 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HumanSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WolfSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "human_walk"
length = 0.5
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("HumanSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=4]
resource_name = "wolf_walk"
length = 0.5
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("WolfSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 23.1948

[sub_resource type="CircleShape2D" id=7]

[sub_resource type="CircleShape2D" id=8]
radius = 4.0

[sub_resource type="Environment" id=12]
background_mode = 4
glow_enabled = true
glow_intensity = 1.5
glow_blend_mode = 0
glow_bicubic_upscale = true
glow_high_quality = true

[node name="Player" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 3 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 5 )

[node name="HumanSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 6
frame = 1

[node name="WolfSprite" type="Sprite" parent="."]
visible = false
material = SubResource( 10 )
texture = ExtResource( 3 )
hframes = 6
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/human_walk = SubResource( 2 )
anims/wolf_walk = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = -150
limit_top = -150
limit_right = 800
limit_bottom = 600
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="PlayerLight" type="Light2D" parent="."]
texture = ExtResource( 5 )
texture_scale = 0.2
energy = 0.0
mode = 2

[node name="InteractDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractDetection"]
shape = SubResource( 6 )

[node name="DashTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 7 )

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 8 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 12 )

[connection signal="area_entered" from="InteractDetection" to="." method="_on_Detection_area_entered"]
[connection signal="area_exited" from="InteractDetection" to="." method="_on_Detection_area_exited"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
